fix PDF rendering with missing background

--- a/reports/templates/reports/report.css
+++ b/reports/templates/reports/report.css
@@ -56,7 +56,9 @@ td, th {
   margin-left: {{report.layout.margin_left}}mm;
 
   /* background */
+  {% if report.layout.background %}
   background-image: url("{{report.layout.background.url}}");
+  {% endif %}
   background-size: {{report.layout.width}}mm {{report.layout.height}}mm;
   background-position: -{{report.layout.margin_left}}mm -{{report.layout.margin_top}}mm;
 }
